# Generated by Django 5.2.4 on 2025-07-24 10:13

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='StockAsset',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
        ),
        migrations.CreateModel(
            name='StockChart',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
        ),
        migrations.CreateModel(
            name='StockHistory',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
        ),
        migrations.CreateModel(
            name='StockInfo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ticker', models.CharField(help_text='종목 코드 (예: AAPL, 005930)', max_length=20, unique=True)),
                ('name', models.CharField(help_text='회사명', max_length=200)),
                ('market', models.CharField(help_text='시장 (KOSPI, KOSDAQ, NASDAQ 등)', max_length=50)),
                ('sector', models.CharField(blank=True, help_text='업종', max_length=150, null=True)),
                ('industry', models.CharField(blank=True, help_text='산업군', max_length=150, null=True)),
                ('listed_at', models.DateField(blank=True, help_text='상장일', null=True)),
                ('is_active', models.BooleanField(default=True, help_text='현재 거래 여부')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': '종목 기본 정보',
                'verbose_name_plural': '종목 기본 정보 목록',
            },
        ),
        migrations.CreateModel(
            name='StockInterest',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
        ),
        migrations.CreateModel(
            name='StockNews',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
        ),
    ]
